--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             >
               <img
                 src="https://nextgenelectra.netlify.app/assets/nxtgen-logo-removebg-preview.png"
-                alt=""
+                alt="NXTGEN ELECTRA"
               />
             </a>
             <a
@@ -353,7 +353,7 @@
               rel="noopener noreferrer"
               class="sponsor-link"
             >
-              <img src="signal-2025-12-13-122148_004-removebg-preview.png" alt="" />
+              <img src="Logo.png" alt="LUSSOLANE" />
             </a>
           </div>
         </div>
