--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
               <!-- NXTGEN ELECTRA -->
               <a
-                href="https://nextgenelectra.netlify.app/"
+                href="https://buyhardisk.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="flex items-center justify-center"
@@ -391,7 +391,7 @@
 
             <!-- NXTGEN ELECTRA -->
             <a
-              href="https://nextgenelectra.netlify.app/"
+              href="https://buyhardisk.com/"
               target="_blank"
               rel="noopener noreferrer"
               class="transition-opacity hover:opacity-80"
